# datlake

./: .dockerignore  .env.example  BACKEND_MIGRATION_SUMMARY.md  Dockerfile  POLARS_DUCKDB_BEST_PRACTICES_IMPLEMENTATION_PROGRESS.md  PYTHON_BEST_PRACTICES_IMPLEMENTATION_PROGRESS.md  README.md  hello.py  projectplan.md  pyproject.toml  setup-logs.sh  test_ducklake_setup.py
agent_prompts/: default_best_practices_prompt_polars.txt
app/: config.py  lineage.py  main.py  queue_worker.py
app/instrumentation/: __init__.py  memory.py
app/routers/: lineage.py
backend/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  sse_test.html  systemplan.md  test_zombie_detection.py
backend/app/: config.py  (+7 more)
config/: development.env  production.env  staging.env
datlake_sdk/: __init__.py  client.py  context.py  detached.py  errors.py  functional.py  result.py  storage.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  systemplan.md  tailwind.config.ts
infra/: systemplan.md
k8s/: backend-deployment.yaml  backend-ingress.yaml  backend-service.yaml  build-and-deploy.sh  loki-deployment.yaml  marimo-deployment.yaml  marimo-ingress.yaml  marimo-service.yaml  minio-secret.yaml  minio-values.yaml  postgres-credentials.yaml  postgres-values.yaml  promtail-deployment.yaml  registry-deployment.yaml  test-deployment.sh
make_setup/: Makefile  REGISTRY_README.md  test-registry.sh
marimo/: Dockerfile  README.md  deploy.sh  test-local.sh  test_data_generator.py
scripts/: logs.sh  monitor-postgres.sh  test-with-logs.sh
testing/: systemplan.md
(+43 files in other folders)
