[project]
name = "datlake"
version = "0.1.0"
description = "Data lake application with DuckDB and MinIO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "duckdb>=1.3.0",
    "pyarrow>=20.0.0",
    "boto3>=1.38.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.20",
    "pandas>=2.3.0",
    "openlineage-python>=1.25.0",
    "asyncpg>=0.30.0",
    "pgmq>=2.0.0"
]
