[project]
name = "datlake"
version = "0.1.0"
description = "Data lake application with DuckDB and MinIO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.0",
    
    # Modern data stack - core
    "polars[all]>=0.20.0",
    "duckdb>=0.9.0",
    "pyarrow>=15.0.0",
    
    # Modern data stack - extensions
    "connectorx>=0.3.0",
    "deltalake>=0.15.0",
    "fastparquet>=2024.11.0",
    "fsspec[s3,gcs,azure]>=2024.10.0",
    
    # Cloud storage and databases
    "boto3>=1.38.0",
    "asyncpg>=0.26.0,<0.27.0",
    "pgmq>=0.6.0",
    
    # Data lineage and monitoring
    "openlineage-python>=1.25.0",
    
    # Notebook interface
    "marimo>=0.8.0",
    
    # Development and testing
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]
